--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Kang's Homepage
 page-top-title: kang
-top-section-bg-text: AI
+top-section-bg-text: 个人主页
 home-subtitle: kang
 copyright-text: '&copy; kang 2025-2026. All Rights Reserved.'
